--- a/ecommerce-computers/src/app/produtos/produtos.component.html
+++ b/ecommerce-computers/src/app/produtos/produtos.component.html
@@ -1,9 +1,9 @@
 <section class="product-list">
     <div class="product-list__card" *ngFor="let produto of produtos">
-        <a routerLink="/produtos/{{produto.id}}" class="product-list__link">
+        <a routerLink="/produtos/{{produto?.id}}" class="product-list__link">
             <img [src]="produto.imagem">
             <h2 class="produt-item__name">
-                Produto 01
+                {{produto.descricao}}
             </h2>
             <p class="product-item__price">
                 {{produto.preco | currency: "BRL"}}
