--- a/ecommerce-computers/src/app/header/header.component.html
+++ b/ecommerce-computers/src/app/header/header.component.html
@@ -11,7 +11,8 @@
                         <i class="fa-solid fa-cart-shopping"></i>
                         Carrinho
                         <span class="badge-carrinho">{{carrinhoService.obtemCarrinho().length}}</span>
-                    </a></li>
+                    </a>
+                </li>
                 <li><a routerLink="contato">Contato</a></li>
                 <li><a routerLink=""><i class="fa-brands fa-facebook-f"></i></a></li>
                 <li><a><i class="fa-brands fa-instagram"></i></a></li>
@@ -19,9 +20,6 @@
                 <li><a><i class="fa-brands fa-linkedin-in"></i></a></li>
             </ul>
         </nav>
-        <form class="search-form">
-            <input type="text">
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
-        </form>
+        <app-barra-pesquisa></app-barra-pesquisa>
     </div>
 </header>
